[gd_scene load_steps=3 format=3 uid="uid://b4nccjurg3w3f"]

[ext_resource type="Script" uid="uid://dk1pbb5bqb4oj" path="res://Calculators/Stress/stress.gd" id="1_caydm"]
[ext_resource type="Texture2D" uid="uid://dnswhwlkqm24a" path="res://Calculators/CalculatorBackground.png" id="2_0u48n"]

[node name="Stress" type="Node2D"]
script = ExtResource("1_caydm")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
offset_left = -192.0
offset_top = -144.0
offset_right = 352.0
offset_bottom = 216.0
texture = ExtResource("2_0u48n")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Constants" type="Node2D" parent="."]

[node name="Title" type="Label" parent="Constants"]
offset_left = -128.0
offset_top = -128.0
offset_right = 56.0
offset_bottom = -104.0
text = "Engineering Stress"

[node name="A0" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = -104.0
offset_right = -64.0
offset_bottom = -64.0
text = "Force"

[node name="AF" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = -40.0
offset_right = -64.0
text = "A0"

[node name="CW" type="Label" parent="Constants"]
offset_left = -176.0
offset_top = 24.0
offset_right = -64.0
offset_bottom = 64.0
text = "Ïƒ"

[node name="SideDisplay" type="RichTextLabel" parent="."]
offset_left = 24.0
offset_top = -104.0
offset_right = 320.0
offset_bottom = 152.0
focus_mode = 2
text = "F should be in N
Cross Sectional Area should be in m^2
Strain should be in decimal form"
vertical_alignment = 1
selection_enabled = true

[node name="Force" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = -104.0
offset_bottom = -64.0
placeholder_text = "Force (N)"

[node name="CrossSection" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = -40.0
placeholder_text = "Area (m^2)"

[node name="Stress" type="TextEdit" parent="."]
offset_left = -128.0
offset_top = 24.0
offset_bottom = 64.0
placeholder_text = "Stress (Pa)"

[node name="Calculate" type="Button" parent="."]
offset_left = -128.0
offset_top = 88.0
offset_bottom = 152.0
text = "Calculate"

[node name="Clear" type="Button" parent="."]
offset_left = -128.0
offset_top = 160.0
offset_bottom = 200.0
text = "Clear"

[connection signal="text_changed" from="Force" to="." method="_on_original_length_text_changed"]
[connection signal="text_changed" from="CrossSection" to="." method="_on_final_length_text_changed"]
[connection signal="text_changed" from="Stress" to="." method="_on_strain_text_changed"]
[connection signal="pressed" from="Calculate" to="." method="_on_calculate_pressed"]
[connection signal="pressed" from="Clear" to="." method="_on_clear_pressed"]
